--- a/lectures/assets/style.css
+++ b/lectures/assets/style.css
@@ -36,7 +36,7 @@
     /* background image */
     /* position: relative; */
     background-color: #ffffff;
-    background-image: url("https://storage.googleapis.com/slide_assets/background_shape.png");
+    background-image: url("https://storage.googleapis.com/slide_assets/background_shape.svg");
     background-size: 100% 100%;
 }
 
